# aether

./: .envrc  .gitignore  bake  cabal.project  cabal.project.freeze  compiler.cabal  flake.nix  test.ir
bakery/: bakery.cabal  cabal.project  cabal.project.freeze
bakery/src/: Args.hs  Main.hs  Rules.hs
compiler/: cabal.project  cabal.project.freeze  compile.c  compiler.cabal  test_runtime.c  test_runtime.zig  testing.cp
compiler/bench/: Main.hs
compiler/ffi/: .gitignore  CHANGELOG.md  Setup.hs  ffi.cabal  ffi.cabal.template
compiler/ffi/src/: Zigbits.hs
compiler/ffi/zigbits/: build.zig
compiler/ffi/zigbits/src/: intern.zig  lazy.zig  main.zig
compiler/genapply/: Main.hs
compiler/include/: effectful.h  optics.h
compiler/src/: Cfg.hs  Cp.hs  Dot.hs  Imports.hs  Lir.hs  Sexp.hs
compiler/src/Backend/: X86.hs
compiler/src/Backend/X86/: Jump.hs  Reg.hs  Register.hs
compiler/src/Cfg/: Dataflow.hs  Graph.hs  Types.hs
compiler/src/Cp/: Check.hs  Driver.hs  Parser.hs  Syntax.hs
compiler/src/Cp/Backend/: C.hs  Lir.hs
compiler/src/Data/: BigGraph.hs  BitSet.hs  Deque.hs  Graph.hs  HashSetDeque.hs  IdMap.hs  Intern.hs  Str.hs  Subst.hs  Sym.hs  TextUtils.hs  ToInt.hs
compiler/src/Data/NonDet/: Class.hs  Map.hs  Set.hs
compiler/src/Effects/: Emit.hs  Fresh.hs
compiler/src/Imports/: Data.hs  Debug.hs  Dot.hs  Function.hs  Functor.hs  Kind.hs  Monad.hs  Optics.hs  Panic.hs  Traversable.hs
compiler/src/Lir/: Elaborate.hs  Graph.hs  Instr.hs  Pretty.hs  Print.hs  Sexp.hs  Ssa.hs  ToTree.hs
compiler/src/Lir/Backend/: X86.hs
compiler/src/Lir/Backend/X86/: Register.hs
compiler/src/Sexp/: Parser.hs  Syntax.hs
compiler/src/include/: effectful.h
compiler/test/: CpTest.hs  LirTest.hs  Main.hs  SexpTest.hs  Snapshot.hs
compiler/test_data/: first  first.c  first.cp
compiler/test_data/lir_liveness/: loop.lir  loop.output
compiler/test_data/lir_parse/: first.lir  first.output  loop.lir  loop.output
compiler/test_data/lir_ssa/: loop.lir  loop.output
compiler/test_data/test_runtime/: build.zig
compiler/test_data/test_runtime/src/: main.zig
runtime/: build.zig  test  test.c
runtime/headers/: aether.h  aether.zig  builtins.h  testing.h
runtime/scripts/: apply.zig  generate_apply.py  generate_apply_nix
runtime/src/: apply.zig  c.zig  main.zig  object.zig
scripts/: bake
