cabal-version: 3.6

name: bakery

version:            0.1.0.0

license: MIT

license-file: LICENSE

author: Brian

maintainer: littlebubu.shu@gmail.com

build-type: Simple

common common-flags
  default-extensions:
    FlexibleInstances,
    FlexibleContexts,
    InstanceSigs,
    MultiParamTypeClasses,
    ConstraintKinds,
    LambdaCase,
    EmptyCase,
    TupleSections,
    BangPatterns,
    TypeApplications,
    StandaloneDeriving,
    RankNTypes,
    ScopedTypeVariables,
    NamedFieldPuns,
    DuplicateRecordFields,
    GeneralizedNewtypeDeriving,
    DataKinds,
    ConstraintKinds,
    TypeApplications,
    KindSignatures,
    StandaloneKindSignatures,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveLift,
    DeriveTraversable ,
    GeneralizedNewtypeDeriving,
    BlockArguments,
    GADTs,
    PolyKinds,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    FunctionalDependencies,
    ExistentialQuantification,
    TypeOperators,
    NoFieldSelectors,
    OverloadedLabels,
    OverloadedRecordDot,
    StrictData,
    TypeData,
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wno-name-shadowing
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Wno-missing-signatures
  build-depends: 
    base >= 4.17,
    text >= 2.0,
    hashable,
    filepath >= 1.4.100.4,
    directory,
    bytestring,
    mtl,
    containers,
    unordered-containers,
    optics,
    vector,
    deepseq,
    shake,
    optparse-applicative,

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable bake
    import: common-flags, rtsopts

    main-is: Main.hs
    other-modules:
      Args
      Rules

    build-depends:

    hs-source-dirs: src

