cabal-version:      3.4
name:               compiler
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             brian
maintainer:         littlebubu.shu@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-flags
  default-extensions:
    FlexibleInstances,
    FlexibleContexts,
    InstanceSigs,
    MultiParamTypeClasses,
    ConstraintKinds,
    LambdaCase,
    EmptyCase,
    TupleSections,
    BangPatterns,
    TypeApplications,
    StandaloneDeriving,
    RankNTypes,
    ScopedTypeVariables,
    NamedFieldPuns,
    DuplicateRecordFields,
    GeneralizedNewtypeDeriving,
    DataKinds,
    ConstraintKinds,
    TypeApplications,
    KindSignatures,
    StandaloneKindSignatures,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveLift,
    DeriveTraversable ,
    BlockArguments,
    GADTs,
    PolyKinds,
    ViewPatterns,
    PatternSynonyms,
    TypeFamilies,
    FunctionalDependencies,
    ExistentialQuantification,
    TypeOperators,
    NoFieldSelectors,
    OverloadedLabels,
    OverloadedRecordDot,
    StrictData,
    TypeData,
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Wno-name-shadowing
    -Werror=incomplete-patterns
    -Werror=incomplete-uni-patterns
    -Werror=missing-methods
    -Wno-missing-signatures
    +RTS
    -A128M
    -RTS
  build-depends: 
    base >= 4.17,
    ffi,
    text >= 2.1,
    hashable,
    filepath >= 1.4.100.4,
    temporary,
    directory,
    bytestring,
    mtl,
    containers,
    unordered-containers,
    primitive >= 0.9.0.0,
    optics,
    pretty-simple,
    prettyprinter,
    vector,
    megaparsec,
    parser-combinators,
    typed-process,
    scientific,
    text-builder-linear,
    these,
    bitvec,
    effectful,
    effectful-core,
  include-dirs:
    src/include

library
  import: common-flags
  exposed-modules:
    Imports
    Imports.Dot
    Imports.Debug
    Imports.Panic
    Imports.Data
    Imports.Monad
    Imports.Functor
    Imports.Function
    Imports.Traversable
    Imports.Kind
    Lir
    Cp
    Cp.Check
    Cp.Parser
    Cp.Syntax
    Cp.Driver
    Cp.Backend.C
    Data.IdMap
    Data.ToInt
    Data.BitSet
    Data.Intern
    Data.TextUtils
    Data.Str
  hs-source-dirs:   src

common rtsopts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable genapply
  import: common-flags, rtsopts
  main-is: Main.hs
  build-depends: compiler
  hs-source-dirs: genapply

executable compiler
    import: common-flags, rtsopts
    main-is:          Main.hs
    build-depends:
        compiler
    hs-source-dirs:   app

test-suite compiler-test
    import: common-flags, rtsopts
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      compiler,
      tasty,
      tasty-hunit,
